--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/app": "^15.0.0",
     "@react-native-firebase/auth": "^15.0.0",
     "@react-native-firebase/firestore": "^15.0.0",
+    "@react-native-firebase/storage": "^15.1.1",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
