--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
+    "@rneui/base": "^4.0.0-rc.5",
+    "@rneui/themed": "^4.0.0-rc.5",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-background-timer": "^2.4.1",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-navigation": "^7.28.0",
     "react-native-onboarding-swiper": "^1.2.0",
@@ -34,7 +37,8 @@
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
-    "react-native-select-dropdown": "^2.0.3"
+    "react-native-select-dropdown": "^2.0.3",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
