--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@notifee/react-native": "^5.4.1",
     "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^15.0.0",
